# otp-desktop

./: .gitmodules  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: linux-macos.yml  linux.yml
conan/oath-toolkit/: conandata.yml  conanfile.py
deploy/: otp-desktop.desktop
include/: add_edit_item_dialog.hpp  add_item_dialog.hpp  create_password_dialog.hpp  crypto.hpp  enter_password_dialog.hpp  main_window.hpp  otp_item_delegate.hpp  otp_list.hpp  otp_list_model.hpp  shit.hpp  totp.hpp  utils.hpp
src/: add_edit_item_dialog.cpp  add_item_dialog.cpp  create_password_dialog.cpp  crypto.cpp  enter_password_dialog.cpp  main.cpp  main_window.cpp  otp_item_delegate.cpp  otp_list.cpp  otp_list_model.cpp  shit.cpp  totp.cpp  utils.cpp
ui/: add_edit_item_dialog.ui  add_item_dialog.ui  create_password_dialog.ui  enter_password_dialog.ui  main_window.ui
